--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 anyio==4.5.2
+black==25.12.0
 certifi==2025.11.12
+click==8.3.1
 exceptiongroup==1.3.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
+mypy_extensions==1.1.0
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.5.1
 python-dotenv==1.0.1
 python-telegram-bot==21.6
+pytokens==0.3.0
 sniffio==1.3.1
 typing_extensions==4.13.2
