Refactor: Consolidate month command into status and implement connection pooling
Major improvements to command structure and database performance:

Commands:
- Merge /month command into /status with optional month argument
  * /status → current month summary
  * /status YYYY-MM → historical month summary
  * /status [YYYY-MM] <category> → category details (current or historical)
  * /status full/all → show all categories
  * /m alias now available on /status command
- Differentiate error messages: historical months show 'data not recorded' vs
  current month shows budget message and lists active rules

Expenses:
- Add optional category support to /add command for quick logging
  * /add <name> <amount> [currency] → uses 'Uncategorized'
  * /add <category> <name> <amount> [currency] → explicit category
  * Smart parser detects format automatically
  * Backward compatible with existing format

Database:
- Implement SQLite connection pooling with thread-local storage
  * DatabasePool class manages per-thread connections
  * Eliminates 'database is locked' errors
  * Improves performance by reusing connections
  * Graceful shutdown on bot exit
- Remove all explicit conn.close() calls from services, export_csv, and fx modules
- Add proper connection cleanup in main.py with try/finally block

Code Quality:
- Create handlers_config.py system for declarative command registration
  * Centralized command management in one file
  * Easy to add/remove/reconfigure handlers
  * All 20 commands organized logically
- Refactor report.py with BudgetReport utility class
  * BudgetMetrics dataclass for calculated values
  * Eliminate ~200 lines of code duplication
  * Shared methods: calculate_metrics(), sort_categories(),
    format_category_line(), get_category_summary_lines()

Documentation:
- Update README.md with new /status command syntax
- Update setup.yaml help message to reflect consolidated commands
- Add comprehensive usage examples for all features

--- a/src/handlers/messages/expenses.yaml
+++ b/src/handlers/messages/expenses.yaml
@@ -1,7 +1,13 @@
 # Messages for expenses.py
 usage_add: |
-  Usage: /add <category> <name> <amount> [currency] (/a)
-  Example: /add Travel Taxi 20 EUR
+  Usage: /add <name> <amount> [currency] (/a)
+     or: /add <category> <name> <amount> [currency]
+  Examples (no category → "Uncategorized"):
+    /add Groceries 62.40
+    /add "Taxi to airport" 20 EUR
+  Examples (with category):
+    /add Food Groceries 62.40
+    /add "Food & Drinks" "Taxi to airport" 20 EUR
 currency_error: "Currency must be a 3-letter code (EUR, USD, ...)."
 amount_parse_error: "Couldn't parse amount. Example: /add Travel Taxi 20 EUR"
 add_success_base: "✅ Added: [{category}] {name} = {amount:.2f} {currency}"
