--- a/src/handlers/messages/report.yaml
+++ b/src/handlers/messages/report.yaml
@@ -1,8 +1,6 @@
-# Messages for budget.py
-usage_setbudget: "Usage: /setbudget <amount> (/sb)"
-parse_amount_error: "Couldn't parse amount. Example: /setbudget 2500"
-set_budget_success: "✅ Set budget for {month}: {amount:.2f} {currency}"
+# Messages for report.py
 no_budget_set: "📅 {month}\nNo overall budget set. Use /setbudget <amount> (or /sb)"
+historical_month_no_data: "📅 {month}\nData was not recorded for this month."
 category_not_found: "⚠️ Category not found: *{category}*\n\nAvailable categories:\n{categories}"
 category_not_found_no_categories: "⚠️ Category not found: {category}\n(no categories yet)"
 category_details: "📅 {month} — *{category}*\nPlanned: {planned_label}\nSpent: {spent:.2f} {currency}\n{tag} Remaining (category): {remaining:.2f} {currency}"
@@ -18,8 +16,8 @@ status_remaining: "{remaining_tag} Remaining overall: {remaining_overall:.2f} {c
 status_top_categories: "Top categories (showing {top_n}/{total}). Use `/status full` or `/s full` for all."
 status_no_categories: "(no categories yet)"
 status_header_tips: "Tips:"
-status_tip_quotes: "• Use quotes for spaces: /status \"Food & Drinks\""
-status_tip_full: "• See all categories: /status full"
+status_tip_quotes: "• Use quotes for spaces: /status \"Food & Drinks\" or /status 2025-12 \"Food & Drinks\""
+status_tip_full: "• See all categories: /status full  or  /status 2025-12 full"
 status_by_category: "By category (planned | spent | remaining):"
 status_by_category_planned: "Planned categories (planned | spent | remaining):"
 status_by_category_unplanned: "Unplanned categories (spent):"
@@ -27,16 +25,3 @@ categories_usage: "Usage: /categories [YYYY-MM] or /c [YYYY-MM]\nExample: /categ
 categories_header: "📂 Categories for {month}:"
 categories_no_categories: "📅 {month}\nNo categories yet."
 categories_tip: "Tip: /status \"Category Name\" or /s \"Category Name\""
-month_usage: "Usage: /month YYYY-MM or /m YYYY-MM (example: /month 2025-12)"
-month_no_budget: "📅 {month}\nNo overall budget set for this month."
-month_header: "📅 {month} — Summary"
-month_budget: "Budget: {overall_budget:.2f} {currency}"
-month_planned: "Planned (rules): {planned_total:.2f} {currency}"
-month_spent: "Spent (all expenses): {spent_total:.2f} {currency}"
-month_unplanned: "Unplanned spend: {unplanned_spent:.2f} {currency}"
-month_overspend: "Spent beyond plan: {overspend_total:.2f} {currency}"
-month_separator: "——————————"
-month_remaining: "{remaining_tag} Remaining overall: {remaining_overall:.2f} {currency}"
-month_top_categories: "Top categories (showing {top_n}/{total}). Use `/status full` or `/s full` for all."
-month_by_category: "By category (planned | spent | remaining):"
-month_no_categories: "(no categories yet)"
