Add currency validation safeguards and improve FX caching
- Add InvalidCurrencyError with two subtypes: CurrencyFormatError and CurrencyNotSupportedError
- Validate currency format (3 uppercase letters) before API calls
- Fetch and cache available currencies from Frankfurter API
- Graceful degradation: use 1.0 rate if currency list API fails
- Add BoundedLRUCache to prevent unbounded FX rate memory growth (max 1000 entries)
- Update expense handler to catch and distinguish between format and availability errors
- Add currency_not_supported message for unavailable currencies
- Update README with currency validation and caching improvements
- Separate error messages: format error vs not supported currency

--- a/src/handlers/messages/expenses.yaml
+++ b/src/handlers/messages/expenses.yaml
@@ -9,6 +9,7 @@ usage_add: |
     /add Food Groceries 62.40
     /add "Food & Drinks" "Taxi to airport" 20 EUR
 currency_error: "Currency must be a 3-letter code (EUR, USD, ...)."
+currency_not_supported: "⚠️ Currency not supported. Check available currencies at https://api.frankfurter.dev/v1/currencies"
 amount_parse_error: "Couldn't parse amount. Example: /add Travel Taxi 20 EUR"
 add_success_base: "✅ Added: [{category}] {name} = {amount:.2f} {currency}"
 add_success_fx: |
