feat: add comprehensive input validation and sanitization
- Create validators.py module with validation functions for amounts, categories, names, and budgets
- Add amount constraints: 0.01 - 999,999.99 (prevents invalid/unreasonable values)
- Add category constraints: 1-50 chars, forbid special chars (< > " ' / \ | and line breaks)
- Add name constraints: 1-100 chars, forbid line breaks and tabs
- Add budget constraints: 0.01 - 999,999.99 per month
- Update expenses.py to validate category and name before database insert
- Update rules.py to validate amounts, categories, and rule names in setbudget and rule setters
- Add 10 new validation error messages to handlers/messages/errors.yaml
- Update README with Input Validation section documenting all constraints
- Update README Project Structure to include validators.py
- All inputs automatically trimmed of leading/trailing whitespace

--- a/src/handlers/messages/errors.yaml
+++ b/src/handlers/messages/errors.yaml
@@ -21,6 +21,18 @@ timeout_error: "⏱️ Request timed out. Please try again."
 permission_denied: "🔒 Permission denied. You don't have access to this operation."
 not_found: "❌ The requested resource was not found."
 
+# Validation errors
+amount_too_small: "❌ Amount must be at least 0.01. Please use a larger amount."
+amount_too_large: "❌ Amount is too large (max 999,999.99). Please use a smaller amount."
+budget_too_small: "❌ Budget must be at least 0.01. Please use a larger amount."
+budget_too_large: "❌ Budget is too large (max 999,999.99). Please use a smaller amount."
+empty_category: "❌ Category name cannot be empty. Please provide a valid category."
+category_too_long: "❌ Category name is too long (max 50 characters). Please shorten it."
+invalid_category_format: "❌ Category name contains invalid characters. Please avoid: < > \" ' / \\ | and line breaks."
+empty_name: "❌ Name cannot be empty. Please provide a valid name."
+name_too_long: "❌ Name is too long (max 100 characters). Please shorten it."
+invalid_name_format: "❌ Name contains invalid characters. Please avoid line breaks and tabs."
+
 # Generic error
 unexpected_error: "❌ An unexpected error occurred. Please try again later or contact support."
 connection_error: "🔌 Connection error. Please check your internet connection and try again."
