feat: enhance UI with emoji period indicators, smart formatting, and pagination improvements
- Replace text-based period indicators (d/m/y) with emoji (☀️/📅/📆) in rules display
- Add legend showing emoji meanings on first page only
- Cap rule names at 20 characters with perfect alignment
- Right-align amounts for visual consistency across all rows
- Move legend to end of rules list with one item per line
- Improve expenses display with compact aligned format
- Add comprehensive Pagination System section to README
- Document new UI improvements and formatting enhancements
- Consolidate duplicate _format_rules_page_grouped function
- Import _format_rules_page in rules.py from pagination_callbacks module

--- a/src/handlers/messages/rules.yaml
+++ b/src/handlers/messages/rules.yaml
@@ -53,9 +53,16 @@ setmonthly_success_fx: |
   {amount:.2f} {currency}/month → {converted:.2f} {base_currency}/month (rate {rate:.6f}, {fx_date})
 
 no_rules: "No rules yet."
-rules_list_header: "📌 Rules (stored in {currency}):"
+rules_list_header: "📌 Rules:"
+rules_list_footer: |
+  
+  📋 Legend:
+  ☀️  = Daily
+  📅 = Monthly
+  📆 = Yearly
+  
+  Delete one with: /delrule <id>
 rules_list_item: "- ID {id}: [{category}] {name} — {amount:.2f} {currency} / {period}"
-rules_list_footer: "\nDelete one with: /delrule <id>"
 
 usage_delrule: "Usage: /delrule <id>"
 rule_id_error: "Rule id must be an integer."
